--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,8 @@
     "axios": "^0.16.2",
     "vue": "^2.5.2",
     "vue-axios": "^2.0.2",
+    "vue-infinite-scroll": "^2.0.2",
+    "vue-resource": "^1.3.4",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
