--- a/client/package.json
+++ b/client/package.json
@@ -15,11 +15,14 @@
   },
   "dependencies": {
     "axios": "^0.16.2",
+    "babel-runtime": "^6.26.0",
+    "vee-validate": "^2.0.0-rc.19",
     "vue": "^2.5.2",
     "vue-axios": "^2.0.2",
     "vue-infinite-scroll": "^2.0.2",
     "vue-resource": "^1.3.4",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vue-validator": "^3.0.0-alpha.2"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
